Homepage layout bug fix (mobile)

--- a/src/landing/home.css
+++ b/src/landing/home.css
@@ -10,6 +10,14 @@
   grid-template-rows: 1fr auto 1fr;
 }
 
+@media (max-width: 800px) {
+  .home {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto 1fr;
+  }
+}
+
 .home-header-logo {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
@@ -49,7 +57,7 @@
   .home-header-logo {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    min-height: 2em;
+    min-height: 5.8em;
     margin-top: 0.8em;
     margin-left: 1em;
     margin-bottom: -0.5em;
